# playlab-whatsapp-bridge

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a3f1c8b72d01_add_external_id_to_conversations.py  b5e2d3f4a901_add_bot_fields.py  d18e0a902e85_add_users_conversations_messages_tables.py
app/: __init__.py  main.py
app/api/: health.py  router.py  webhooks.py
app/commands/: parser.py
app/core/: bot_registry.py  config.py
app/db/: __init__.py  base.py  engine.py  models.py
app/parsers/: __init__.py  meta.py  turnio.py  twilio.py
app/privacy/: __init__.py  pseudonymize.py
app/schemas/: __init__.py  inbound.py
app/services/: __init__.py  claude_service.py  meta_service.py  playlab.py  playlab_service.py  turnio.py  turnio_service.py  twilio_service.py
app/workflows/: bridge.py
docker/: Dockerfile
tests/: conftest.py  test_bot_db_models.py  test_bot_registry.py  test_commands.py  test_db_models.py  test_meta_parser.py  test_playlab_sse.py  test_turnio_parser.py  test_twilio_parser.py  test_webhook_integration.py
